MAPREDUCE-1918. Adds documentation to Rumen. Contributed by Amar Kamat
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@996420 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -293,6 +293,8 @@ Trunk (unreleased changes)
     when gridmix.output.directory is not defined. (Ravi Gummadi via
     amareshwari)
 
+    MAPREDUCE-1918. Adds documentation to Rumen. (Amar Kamat via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
