--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1184,6 +1184,8 @@ Release 0.21.0 - Unreleased
 
     HDFS-1267. fuse-dfs does not compile. (Devaraj Das via tomwhite)
 
+    HDFS-1363. Eliminate second synchronized sections in appendFile(). (shv)
+
 Release 0.20.3 - Unreleased
 
   IMPROVEMENTS
