--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -129,6 +129,8 @@ Trunk (unreleased changes)
     HDFS-1395. Add @Override to FSDataset methods that implement
     FSDatasetInterface methods. (suresh)
 
+    HDFS-1320. Improve the error messages when using hftp://.  (szetszwo)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
