HDFS-1093. Change the FSNamesystem lock to a read/write lock. (dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@997940 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -131,6 +131,8 @@ Trunk (unreleased changes)
 
     HDFS-1383. Improve the error messages when using hftp://.  (szetszwo)
 
+    HDFS-1093. Change the FSNamesystem lock to a read/write lock. (dhruba)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
