HDFS-1411. Correct backup node startup command in hdfs user guide. Contributed by Ching-Shen Chen.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@999018 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -796,6 +796,9 @@ Release 0.21.0 - Unreleased
 
     HDFS-806. Add new unit tests to the 10-mins 'run-commit-test' target (cos)
 
+    HDFS-1411. Correct backup node startup command in hdfs user guide.
+    (Ching-Shen Chen via shv) 
+
   OPTIMIZATIONS
 
     HDFS-946. NameNode should not return full path name when lisitng a
