MAPREDUCE-2078. Fixes TraceBuilder to generate traces when a globbed job history path is given. Contributed by Amar Kamat
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@999769 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -298,6 +298,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1918. Adds documentation to Rumen. (Amar Kamat via amareshwari)
 
+    MAPREDUCE-2078. Fixes TraceBuilder to generate traces when a globbed job
+    history path is given. (Amar Kamat via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
