MAPREDUCE-1280. Update Eclipse plugin to the new eclipse.jdt API.  Contributed by Alex Kozlov
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1000212 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1009,6 +1009,9 @@ Release 0.21.0 - Unreleased
 
   BUG FIXES
 
+    MAPREDUCE-1280. Update Eclipse plugin to the new eclipse.jdt API.
+    (Alex Kozlov via szetszwo)
+
     MAPREDUCE-878. Rename fair scheduler design doc to 
     fair-scheduler-design-doc.tex and add Apache license header (matei)
 
