MAPREDUCE-1984. herriot TestCluster fails because exclusion is not there. Contributed by Balaji Rajagopalan,
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1001583 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1815,3 +1815,5 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1897. trunk build broken on compile-mapred-test (cos)
 
+    MAPREDUCE-1984. herriot TestCluster fails because exclusion is not there
+    (Balaji Rajagopalan via cos)
