HDFS-1426. Remove unused method BlockInfo#listCount. Contributed by Hairong Kuang.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1002410 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -141,6 +141,8 @@ Trunk (unreleased changes)
     HDFS-1417. Add @Override to SimulatedFSDataset methods that implement
     FSDatasetInterface methods. (suresh)
 
+    HDFS-1426. Remove unused method BlockInfo#listCount. (hairong)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
