MAPREDUCE-2029. DistributedRaidFileSystem removes itself from FileSystem cache when it is closed. (Ramkumar Vadali via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1003054 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -313,6 +313,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2067.  Distinct minicluster services (e.g. NN and JT) overwrite
     each other's service policies.  (Aaron T. Myers via tomwhite)
 
+    MAPREDUCE-2029. DistributedRaidFileSystem removes itself from FileSystem
+    cache when it is closed. (Ramkumar Vadali via dhruba)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
