HDFS-1420. Clover build doesn't generate per-test coverage. Contributed by Konstantin Boudnik
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1004110 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1218,6 +1218,8 @@ Release 0.21.0 - Unreleased
 
     HDFS-1413. Fix broken links to HDFS Wiki. (shv)
 
+    HDFS-1420. Clover build doesn't generate per-test coverage (cos)
+
 Release 0.20.3 - Unreleased
 
   IMPROVEMENTS
