MAPREDUCE-2090. Clover build doesn't generate per-test coverage. Contributed by Konstantin Bdounik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1004113 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1835,3 +1835,5 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1984. herriot TestCluster fails because exclusion is not there
     (Balaji Rajagopalan via cos)
+
+    MAPREDUCE-2090. Clover build doesn't generate per-test coverage. (cos)
