MAPREDUCE-2040. Forrest Documentation for Dynamic Priority Scheduler. Contributed by Thomas Sandholm.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1004886 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -324,6 +324,11 @@ Trunk (unreleased changes)
 
 Release 0.21.1 - Unreleased
 
+  NEW FEATURES
+
+    MAPREDUCE-2040. Forrest Documentation for Dynamic Priority Scheduler.
+    (Thomas Sandholm via tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-1897. trunk build broken on compile-mapred-test (cos)
