MAPREDUCE-2140. Regenerate fair scheduler design doc PDF.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1024087 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,8 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    MAPREDUCE-2140. Regenerate fair scheduler design doc PDF. (matei)
+
     MAPREDUCE-1546. Redirect all job pages to corresponding history page
     if job is not in JT memory. (Scott Chen via sharad)
 
