MAPREDUCE-2132. A command line option in RaidShell to fix blocks using raid
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1026137 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -138,6 +138,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1819. RaidNode is now smarter in submitting Raid jobs. (Ramkumar
     Vadali via schen)
 
+    MAPREDUCE-2132. A command line option in RaidShell to fix blocks using raid
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
