MAPREDUCE-2134. ant binary-system is broken in mapreduce project. Contributed by Konstantin Boudnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1026158 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -354,6 +354,8 @@ Release 0.21.1 - Unreleased
 
     MAPREDUCE-2090. Clover build doesn't generate per-test coverage. (cos)
 
+    MAPREDUCE-2134. ant binary-system is broken in mapreduce project. (cos)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
