MAPREDUCE-2147. Remove redundant code in JobInProgress ctor.  Contributed by Harsh J Chouraria.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1026426 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -140,6 +140,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2132. A command line option in RaidShell to fix blocks using raid
 
+    MAPREDUCE-2147. Remove redundant lines in JobInProgress ctor.
+    (Harsh J Chouraria via cutting)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
