MAPREDUCE-2126. JobQueueJobInProgressListener's javadoc is inconsistent with source code. Contributed by Jingguo Yao.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1026450 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -338,6 +338,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1908. DistributedRaidFileSystem now handles ChecksumException
     correctly. (Ramkumar Vadali via schen)
 
+    MAPREDUCE-2126. JobQueueJobInProgressListener's javadoc is inconsistent
+    with source code. (Jingguo Yao via tomwhite)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
