MAPREDUCE-2143.  HarFileSystem is able to handle spaces in pathnames. (Ramkumar Vadali via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1027234 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -341,6 +341,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2126. JobQueueJobInProgressListener's javadoc is inconsistent
     with source code. (Jingguo Yao via tomwhite)
 
+    MAPREDUCE-2143.  HarFileSystem is able to handle spaces in pathnames.
+    (Ramkumar Vadali via dhruba)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
