--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -142,6 +142,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2147. Remove redundant lines in JobInProgress ctor.
     (Harsh J Chouraria via cutting)
+   
+    HADOOP-7007. Update the hudson-test-patch ant target to work with the
+    latest test-patch.sh script (gkesavan)
 
   OPTIMIZATIONS
 
