MAPREDUCE-1867. Remove unused methods in org.apache.hadoop.streaming.StreamUtil. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1027685 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -347,6 +347,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2143.  HarFileSystem is able to handle spaces in pathnames.
     (Ramkumar Vadali via dhruba)
 
+    MAPREDUCE-1867.  Remove unused methods in
+    org.apache.hadoop.streaming.StreamUtil.  (amareshwari via tomwhite)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
