MAPREDUCE-1970.  Reed-Solomon code implementation for HDFS RAID. (Scott Chen via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1027822 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -18,6 +18,9 @@ Trunk (unreleased changes)
     MAPREDUCE-220. Collect cpu and memory statistics per task. (Scott Chen via
     acmurthy)
 
+    MAPREDUCE-1970.  Reed-Solomon code implementation for HDFS RAID.
+    (Scott Chen via dhruba)
+
   IMPROVEMENTS
 
     MAPREDUCE-2140. Regenerate fair scheduler design doc PDF. (matei)
