MAPREDUCE-2099.  RaidNode recreates outdated parity HARs. (Ramkumar Vadali via schen)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1028581 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -359,6 +359,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2150.  RaidNode periodically fixes corrupt blocks. (Ramkumar Vadali via
     schen)
 
+    MAPREDUCE-2099.  RaidNode recreates outdated parity HARs. (Ramkumar Vadali
+    via schen)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
