--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -149,6 +149,9 @@ Trunk (unreleased changes)
     HADOOP-7007. Update the hudson-test-patch ant target to work with the
     latest test-patch.sh script (gkesavan)
 
+    MAPREDUCE-1818. RaidNode can specify scheduling parameters. (Ramkumar
+    Vadali via schen)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
