MAPREDUCE-2051. Contribute a fair scheduler preemption system test. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1029877 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -152,6 +152,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1818. RaidNode can specify scheduling parameters. (Ramkumar
     Vadali via schen)
 
+    MAPREDUCE-2051. Contribute a fair scheduler preemption system test.
+    (Todd Lipcon via tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
