MAPREDUCE-2173.  Fix race condition in TestBlockFixer that was causing  intermittent failure (Ramkumar Vadali via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1032490 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -371,6 +371,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2099.  RaidNode recreates outdated parity HARs. (Ramkumar Vadali
     via schen)
 
+    MAPREDUCE-2173.  Fix race condition in TestBlockFixer that was
+    causing  intermittent failure (Ramkumar Vadali via dhruba)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
