MAPREDUCE-2142.  Refactor RaidNode so that the map-reduce component is clearly separated out. (Patrick Kling via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1032497 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -372,7 +372,10 @@ Trunk (unreleased changes)
     via schen)
 
     MAPREDUCE-2173.  Fix race condition in TestBlockFixer that was
-    causing  intermittent failure (Ramkumar Vadali via dhruba)
+    causing  intermittent failure (Patrick Kling via dhruba)
+
+    MAPREDUCE-2142.  Refactor RaidNode so that the map-reduce component is
+    clearly separated out. (Patrick Kling via dhruba)
 
 Release 0.21.1 - Unreleased
 
