--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -158,6 +158,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1892. RaidNode can allow layered policies more efficiently.
     (Ramkumar Vadali via schen)
 
+    MAPREDUCE-1592. Generate Eclipse's .classpath file from Ivy config. (nigel)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
