MAPREDUCE-1592. Generate Eclipse's .classpath file from Ivy config. Contributed by tomwhite.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1032852 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -158,7 +158,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1892. RaidNode can allow layered policies more efficiently.
     (Ramkumar Vadali via schen)
 
-    MAPREDUCE-1592. Generate Eclipse's .classpath file from Ivy config. (nigel)
+    MAPREDUCE-1592. Generate Eclipse's .classpath file from Ivy config. 
+    (tomwhite via nigel)
 
   OPTIMIZATIONS
 
