MAPREDUCE-2034. TestSubmitJob triggers NPE instead of permissions error. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1033668 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -383,6 +383,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2179. Fix RaidBlockSender compilation failure. (Ramkumar Vadali
     via schen)
 
+    MAPREDUCE-2034. TestSubmitJob triggers NPE instead of permissions error.
+    (Todd Lipcon via tomwhite)
+
 Release 0.21.1 - Unreleased
 
   NEW FEATURES
