Fixes Context.setStatus() and progress() apis. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1033814 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -412,6 +412,9 @@ Release 0.21.1 - Unreleased
 
     MAPREDUCE-2134. ant binary-system is broken in mapreduce project. (cos)
 
+    MAPREDUCE-1905. Fixes Context.setStatus() and progress() apis.
+    (amareshwari)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
