--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    MAPREDUCE-2199. build is broken 0.22 branch creation. (cos)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
