MAPREDUCE-2200. TestUmbilicalProtocolWithJobToken is failing without Krb evironment: needs to be conditional. Contributed by Konstantin Boudnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1038878 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-2199. build is broken 0.22 branch creation. (cos)
 
+    MAPREDUCE-2200. TestUmbilicalProtocolWithJobToken is failing without Krb
+    evironment: needs to be conditional. (cos)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
