MAPREDUCE-1809. Ant build changes for Streaming system tests in contrib projects. Contributed by Vinay Kumar Thota
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1039285 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -450,6 +450,9 @@ Release 0.21.1 - Unreleased
     MAPREDUCE-1905. Fixes Context.setStatus() and progress() apis.
     (amareshwari)
 
+    MAPREDUCE-1809. Ant build changes for Streaming system tests in contrib
+    projects. (Vinay Kumar Thota via amareshwari)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
