HDFS-1518. Wrong description in FSNamesystem's javadoc. Contributed by Jingguo Yao
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1040026 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,9 @@ Trunk (unreleased changes)
 
     HDFS-1481. NameNode should validate fsimage before rolling. (hairong)
 
+    HDFS-1518. Wrong description in FSNamesystem's javadoc. 
+    (Jingguo Yao via eli)
+
   OPTIMIZATIONS
 
     HDFS-1458. Improve checkpoint performance by avoiding unnecessary image
