HDFS-1503. TestSaveNamespace fails. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hdfs/trunk@1040411 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,6 +27,8 @@ Trunk (unreleased changes)
 
     HDFS-1516. mvn-install is broken after 0.22 branch creation. (cos)
 
+    HDFS-1503. TestSaveNamespace fails. (Todd Lipcon via cos)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
