--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,9 @@ Trunk (unreleased changes)
     MAPREDUCE-2200. TestUmbilicalProtocolWithJobToken is failing without Krb
     evironment: needs to be conditional. (cos)
 
+    MAPREDUCE-1752. Implement getFileBlockLocations in HarFilesystem.
+    (Patrick Kling via dhruba)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
