MAPREDUCE-2155. RaidNode should optionally use the mapreduce jobs to fix missing blocks.  (Patrick Kling via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@1040417 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1752. Implement getFileBlockLocations in HarFilesystem.
     (Patrick Kling via dhruba)
 
+    MAPREDUCE-2155. RaidNode should optionally use the mapreduce jobs to 
+    fix missing blocks.  (Patrick Kling via dhruba)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
