--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -419,6 +419,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1503. TestSaveNamespace fails. (Todd Lipcon via cos)
 
+    HDFS-1524. Image loader should make sure to read every byte in image file.
+    (hairong)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
